# tapdict

./: .gitignore  .pnp.cjs  .pnp.loader.mjs  README.md  english.md  index.html  package.json
src/: App.tsx  main.tsx
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: Untitled.xcf  icon.icns
src-tauri/resources/: DenseNet_CTC.onnx  readme.md
src-tauri/src/: logic.rs  main.rs  ocr.rs  os_utils.rs
src-tauri/src/utils/: dict.rs  mod.rs  ocr.rs  os_utils.rs  word.rs  word_local.rs
