[package]
name = "tapdict"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["global-shortcut-all", "shell-open", "system-tray", "window-set-always-on-top", "window-set-size"] }
winapi = { version = "0.3.9", features = ["winuser"] }
tauri-runtime = "0.12.1"
screenshots = "0.5.3"
reqwest = "0.11.14"
anyhow = "1.0.69"
tesseract = "0.13.0"
log = "0.4.17"
lazy_static = "1.4.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0" }
regex = {version = "1.7.3"}
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
